# libhat-arm

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/libhat/: scanner.hpp  system.hpp
src/: Scanner.cpp  System.cpp
src/arch/arm/: Scanner.cpp  System.cpp
test/: CMakeLists.txt
test/info/: HardwareInfo.cpp
test/tests/: Scanner.cpp
